feat: add TimeClient