@@ -155,6 +155,22 @@
       <read />
       <read />
     </telnet>
+    <java fork="true"
+          classname="${main.class3}"
+          module="${module}"
+          spawn="false">
+      <jvmarg value="--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED" />
+      <jvmarg value="--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED" />
+      <jvmarg value="--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED" />
+      <jvmarg value="--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED" />
+      <jvmarg value="--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED" />
+      <jvmarg value="--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED" />
+      <arg value="localhost" />
+      <arg value="1230" />
+      <modulepath>
+        <pathelement path="${dist.dir}" />
+      </modulepath>
+    </java>
     <exec executable="jps">
       <arg value="-l" />
       <redirector outputproperty="process.pid">
